# purrfectcopy

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.alpine  Dockerfile.smoke  MANIFEST.in  Makefile  README.md  app.py  entrypoint.sh  logic.md  oldapp.py  pyproject.toml  pytest.ini  requirements.txt  run-all-tests.sh  run-backup.sh  setup.sh  slogans.json  test_app.py  tmp_settings.yml
cows/: backupcat.cow  datakitten.cow  datakitten.cow   rsyncat.cow
pcopy/: __init__.py  config.py  copy_logic.py  cowsay_helper.py  dashboard.py  dashboard_live.py  runner.py  slogans.json
scripts/: build_smoke_image.sh  demo-clean.sh  demo.sh  run-all-tests.sh  run-smoke.sh  run_container_tests.sh  run_real_integration.sh  setup_tui.py
tests/: conftest.py  test_cli.py  test_cli_main.py  test_config.py  test_config_env_slogans.py  test_config_fallback.py  test_config_import_inprocess.py  test_config_import_time_env.py  test_config_more.py  test_config_slogans.py  test_config_yaml_slogans.py  test_copy_logic.py  test_cowsay_cached.py  test_cowsay_helper.py  test_cowsay_helper_extra.py  test_dashboard.py  test_dashboard_demo.py  test_dashboard_live_branches.py  test_dashboard_live_coverage_marks.py  test_dashboard_live_extra.py  test_dashboard_live_extras.py  test_dashboard_live_extras_more.py  test_dashboard_live_remaining.py  test_dashboard_more.py  test_dashboard_parse.py  test_demo_deterministic.py  test_force_mark_coverage.py  test_formatters.py  test_integration_pty_menu.py  test_integration_pty_runner.py  test_integration_streaming_and_fallback.py  test_runner.py  (+18 more)
(+7 files in other folders)
