[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcopy"
version = "0.0.1"
description = "A small rsync wrapper with a rich TUI and playful cowsay banners."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [ { name = "(your name)" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pcopy*"]

[project.urls]
"Source" = "https://example.com/your-repo"
"Homepage" = "https://example.com/your-project"
