[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcopy"
version = "0.0.1"
description = "A small rsync wrapper with a rich TUI and playful cowsay banners."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [ { name = "Leo Postovoit @postphotos" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license-files = ["LICENSE"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pcopy" = ["*.json", "cows/*.cow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pcopy*"]

[project.urls]
"Source" = "https://github.com/postphotos/purrfectcopy"
"Homepage" = "https://leopostovoit.com"
